<resources>
    <string name="app_name">150010041_project2</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">send</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">email</string>
    <string name="mobile">mobile</string>
    <string name="date_of_birth">dob</string>
    <string name="gender">Gender</string>
    <string name="timestamp">Time Stamps</string>
    <string name="sensors">Sensors</string>
    <string name="record">Record</string>
    <string name="logout">Logout</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gps">GPS</string>
    <string name="login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="hint_gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label">Label</string>
    <string name="filename">filename</string>
</resources>
