<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anmol.a150010041_project2.SensorsFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.anmol.a150010041_project2.MainActivity">

        <TextView
            android:id="@+id/main_sensors"
            android:layout_width="153dp"
            android:layout_height="65dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/sensors"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <Switch
            android:id="@+id/sensors_accelerometer"
            android:layout_width="320dp"
            android:layout_height="83dp"
            android:layout_marginTop="8dp"
            android:switchTextAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/accelerometer"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_sensors" />

        <Switch
            android:id="@+id/sensors_gps"
            android:layout_width="320dp"
            android:layout_height="77dp"
            android:layout_marginTop="8dp"
            android:text="@string/gps"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sensors_accelerometer" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
